fix: fixed overflow on css, - removed redunacy in code

--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
   color: rgba(16, 24, 40, 1);
   outline:none;
   /* css debugger */
-  /* border:2px solid red; */
+  border:2px solid red;
 }
 
 
@@ -65,7 +65,6 @@
 }
 
 .contact-title {
-  width: 448px;
   height: 44px;
   font-family: 'Inter';
   font-style: normal;
@@ -368,16 +367,13 @@ main {
     right: 100px;
     top: 40px;
   }
-/* contact-us page */
-.contact-container {
-  display:grid;
-  justify-content:center;
-  place-content: center;
-  margin:3em auto;
-}
+
 .contact-inner-container{
   margin:1em auto;
-  width:85%;
+  /* width:85%; */
+  display:flex;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .form-name-field{
